# LocalNas

./: .gitignore  .tokeignore  Cargo.toml  README.md  package-lock.json  package.json
backend/: app.mjs  downloader.mjs  fmgr.mjs  nodemon.json  package.json
backend/Arrays/: bookFiles.json  compressedFiles.json  imageFiles.json  officeFiles.json  others.json  undefinedFiles.json  videoFiles.json  zipFiles.json
backend/routes/: book.mjs  compressed.mjs  images.mjs  office.mjs  others.mjs  videos.mjs  zip.mjs
localnas/: .eslintrc.json  .server_conf.json  jsconfig.json  next.config.js  nextjs-standalone-deployer  package.json  tailwind.config.js
localnas/Data/: main.mjs
localnas/Data/Arrays/: bookFiles.js  compressedFiles.js  imageFiles.js  officeFiles.js  undefinedFiles.js  videoFiles.js  zipFiles.js
localnas/app/: getData.js  layout.js  page.js
localnas/app/components/: DataGroups.js  Filecard.js  Header.js  HomeData.js  Layout.js  filecard.module.css  getData.js
localnas/app/compressed/: page.js
localnas/app/documents/: page.js
localnas/app/media/: page.js
localnas/app/others/: page.js
localnas/components/: DataGroups.js  Filecard.js  Header.js  HomeData.js  Layout.js  fonts.js  pageHeading.js
localnas/pages/: compressed.js  documents.js  index.js  media.js  others.js
localnas/styles/: globals.css
src/: main.rs
