[package]
name = "localnas"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thread = "0.1.0"
[[bin]]
edition = "2021"
name = "localnas-run"
path = "src/main.rs"